--- a/requirements.txt
+++ b/requirements.txt
@@ -8,7 +8,7 @@ aiofiles==0.8.0
     # via -r requirements.in
 anyio==3.5.0
     # via httpcore
-beautifulsoup4==4.10.0
+beautifulsoup4==4.11.1
     # via
     #   -r requirements.in
     #   markdownify
@@ -16,7 +16,7 @@ certifi==2021.10.8
     # via
     #   httpcore
     #   httpx
-charset-normalizer==2.0.11
+charset-normalizer==2.0.12
     # via httpx
 h11==0.12.0
     # via httpcore
@@ -28,7 +28,7 @@ idna==3.3
     # via
     #   anyio
     #   rfc3986
-markdownify==0.10.3
+markdownify==0.11.2
     # via -r requirements.in
 python-dateutil==2.8.2
     # via -r requirements.in
@@ -43,5 +43,5 @@ sniffio==1.2.0
     #   anyio
     #   httpcore
     #   httpx
-soupsieve==2.3.1
+soupsieve==2.3.2.post1
     # via beautifulsoup4
